# berthacharts

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md
.github/workflows/: ci.yml  pages.yml
crates/anno/: Cargo.toml
crates/anno/src/: annotation.rs  lib.rs
crates/berthacharts/: Cargo.toml
crates/berthacharts/examples/: basic.rs  multiple_charts.rs  network.rs
crates/berthacharts/src/: lib.rs
crates/berthacharts/tests/: facade.rs
crates/bindings-react/: Cargo.toml  LICENSE-MIT
crates/bindings-react/js/: README.md  react.d.ts  react.js
crates/bindings-react/src/: flows.rs  lib.rs
crates/charts/: Cargo.toml
crates/charts/src/: area.rs  bar.rs  heatmap.rs  histogram.rs  lib.rs  line.rs  mark.rs  scatter.rs  sparkline.rs
crates/charts/tests/: zero_size.rs
crates/core/: Cargo.toml
crates/core/src/: channel.rs  chart.rs  coord.rs  dag.rs  dataset.rs  error.rs  event.rs  geometry.rs  guide.rs  ids.rs  interaction.rs  lib.rs  mark.rs  picker.rs  scale.rs  scene.rs  selection.rs  spec.rs  transform.rs  workspace.rs
crates/core/src/coords/: cartesian.rs  mod.rs
crates/core/src/marks/: mod.rs  rect.rs
crates/core/src/scales/: band.rs  linear.rs  mod.rs  util.rs
crates/finance/: Cargo.toml
crates/finance/src/: candlestick.rs  indicators.rs  lib.rs
crates/geo/: Cargo.toml
crates/geo/src/: geojson.rs  lib.rs  map.rs  projection.rs
crates/leptos/: Cargo.toml
crates/leptos/src/: chart.rs  interaction.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: chord.rs  force.rs  lib.rs  sankey.rs  sunburst.rs  tree.rs
crates/renderer-wgpu/: Cargo.toml
crates/renderer-wgpu/src/: lib.rs  shader_rect.wgsl  shader_triangle.wgsl
crates/renderer-wgpu/tests/: smoke.rs
crates/stats/: Cargo.toml
crates/stats/src/: gaussian3.rs  lib.rs
crates/transforms/: Cargo.toml
crates/transforms/src/: aggregate.rs  bin.rs  filter.rs  fingerprint.rs  lib.rs  stack.rs
docs/superpowers/plans/: 2026-07-03-graph-improvements-parallel.md  2026-07-03-rust-kernel-react-adoption.md
docs/superpowers/specs/: 2026-07-03-graph-improvements-parallel-design.md  2026-07-03-rust-kernel-react-adoption-design.md
examples/leptos-gallery/: Cargo.toml  README.md  Trunk.toml  index.html  maplibre_geo.js  style.css  three_charts.js
examples/leptos-gallery/src/: annotation_layer.rs  app.rs  chart_canvas.rs  chart_chrome.rs  data.rs  dom_events.rs  gallery.rs  guide_overlay.rs  main.rs
examples/leptos-gallery/src/examples/: advanced_games.rs  bar_chart.rs  comp_mtd_sales.rs  game_theory.rs  geospatial_map.rs  grid.rs  growth_model.rs  hello_rect.rs  line_chart.rs  markov_churn.rs  mod.rs  planning_workspace.rs  sankey.rs  scatter_plot.rs  state_space_frameworks.rs  state_space_models.rs  sunburst.rs  thompson_sampling.rs  three_d.rs  unified_data_studio.rs  whittle_index.rs
scripts/: build-npm.sh  check-npm-react.mjs
