[workspace]
resolver = "2"
members = [
    "crates/berthacharts",
    "crates/core",
    "crates/transforms",
    "crates/charts",
    "crates/stats",
    "crates/dist",
    "crates/finance",
    "crates/geo",
    "crates/network",
    "crates/anno",
    "crates/renderer-wgpu",
    "crates/leptos",
    "crates/bindings-react",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/berthacharts/berthacharts"
authors = ["Bertha Charts Contributors"]
rust-version = "1.88"
readme = "README.md"

[workspace.dependencies]
# intra-workspace
berthacharts-core         = { path = "crates/core",            version = "0.0.1" }
berthacharts-transforms   = { path = "crates/transforms",      version = "0.0.1" }
berthacharts-charts       = { path = "crates/charts",          version = "0.0.1" }
berthacharts-stats        = { path = "crates/stats",           version = "0.0.1" }
berthacharts-dist         = { path = "crates/dist",            version = "0.0.1" }
berthacharts-finance      = { path = "crates/finance",         version = "0.0.1" }
berthacharts-geo          = { path = "crates/geo",             version = "0.0.1" }
berthacharts-network      = { path = "crates/network",         version = "0.0.1" }
berthacharts-anno         = { path = "crates/anno",            version = "0.0.1" }
berthacharts-renderer-wgpu = { path = "crates/renderer-wgpu",  version = "0.0.1" }
berthacharts-leptos       = { path = "crates/leptos",          version = "0.0.1" }
berthacharts-bindings-react = { path = "crates/bindings-react", version = "0.0.1" }

# third-party — keep the list tight and shared
# `compile-time-rng` avoids a `getrandom` runtime dep, which sidesteps the
# wasm32-unknown-unknown "no default backend" issue in getrandom 0.3+.
ahash      = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
bytemuck   = { version = "1.14", features = ["derive"] }
glam       = { version = "0.27", features = ["bytemuck"] }
smallvec   = "1.13"
thiserror  = "1.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# renderer
wgpu       = "0.19"
pollster   = "0.3"

# bindings
wasm-bindgen = "0.2"
js-sys       = "0.3"
web-sys      = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release.package."*"]
opt-level = 3

[profile.dev.package."*"]
opt-level = 1
