[package]
name = "berthacharts"
description = "Facade crate for Bertha Charts: reusable chart specs, core primitives, transforms, and optional bindings."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
berthacharts-core = { workspace = true }
berthacharts-charts = { workspace = true, optional = true }
berthacharts-transforms = { workspace = true, optional = true }
berthacharts-stats = { workspace = true, optional = true }
berthacharts-geo = { workspace = true, optional = true }
berthacharts-network = { workspace = true, optional = true }
berthacharts-anno = { workspace = true, optional = true }
berthacharts-dist = { workspace = true, optional = true }
berthacharts-finance = { workspace = true, optional = true }
berthacharts-renderer-wgpu = { workspace = true, optional = true }
berthacharts-leptos = { workspace = true, optional = true }

[features]
default = ["charts", "transforms"]
charts = ["dep:berthacharts-charts"]
transforms = ["dep:berthacharts-transforms"]
stats = ["dep:berthacharts-stats"]
geo = ["dep:berthacharts-geo"]
network = ["dep:berthacharts-network"]
anno = ["dep:berthacharts-anno"]
dist = ["dep:berthacharts-dist"]
finance = ["dep:berthacharts-finance"]
renderer-wgpu = ["dep:berthacharts-renderer-wgpu"]
leptos = ["renderer-wgpu", "dep:berthacharts-leptos"]
full = [
    "charts",
    "transforms",
    "stats",
    "geo",
    "network",
    "anno",
    "dist",
    "finance",
    "renderer-wgpu",
    "leptos",
]

[[example]]
name = "basic"
required-features = ["charts"]

[[example]]
name = "multiple_charts"
required-features = ["charts"]

[[example]]
name = "network"
required-features = ["network"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
