[package]
name = "berthacharts-bindings-react"
description = "React / WASM bindings for Bertha Charts."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
berthacharts-core.workspace = true
berthacharts-charts.workspace = true
berthacharts-network.workspace = true
berthacharts-renderer-wgpu.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
] }
