[package]
name = "berthacharts-finance"
description = "Finance marks and indicators (OHLC, candlestick, MA, Bollinger, RSI, MACD) for Bertha Charts."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
berthacharts-core.workspace = true
