[package]
name = "berthacharts-leptos"
description = "Leptos bindings for Bertha Charts — signal-native, zero JS runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
berthacharts-core.workspace = true
berthacharts-renderer-wgpu.workspace = true
leptos = { version = "0.7", features = ["csr"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
    "Window",
    "HtmlCanvasElement",
    "DomRect",
    "Performance",
    "PointerEvent",
    "Event",
    "EventTarget",
] }
