[package]
name = "berthacharts-stats"
description = "Statistical transforms (regression, KDE, CDF, quantile, bootstrap, correlation) for Bertha Charts."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
berthacharts-core.workspace = true
ahash.workspace = true
thiserror.workspace = true
